Mark clicraft as experimental
Call out clicraft's experimental status in README.

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+This is EXPERIMENTAL software. Use at your own risk!
+
 clicraft is a command-line wrapper for operation and administration of a
 Minecraft or Bukkit server. It is writtin in BASH, and uses tmux to daemonize
 and communicate with the server process.
