--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@ started(), stopped()
 bash completion
 test/, scripts/
 canonicalize paths, make sure relative paths in config work okay
+make sure clicraft will work with minimal, cron-like PATH
