--- a/TODO
+++ b/TODO
@@ -1,15 +1,16 @@
 FEATURES
 * complement DOWNLOAD_COMMAND and START_COMMAND with DOWNLOAD_OPTS / START_OPTS
 * multi-user support with $XDG_*
+* look into expect script as used by minecraft-server in AUR
 
 URGENT
-* PKGBUILD install file
-* Wiki page
+* Wiki page (for sudo)
 * Ubuntu speed-test
 
 DOCUMENTATION
 * syntax
 * config file
+* troubleshooting
 * action scripts
 ** variables
 ** functions
