--- a/README.asciidoc
+++ b/README.asciidoc
@@ -23,32 +23,31 @@ See +LICENSE+ for terms and conditions and +TODO+ for planned features.
 QuickInstall
 ------------
 
+NOTE: If you're viewing this page on GitHub, the formatting of block code
+below won't preserve line breaks. Sorry about that.
+
 If you don't have a `./configure` script, generate one with
 
-   autoconf
+	autoconf
 
 To install under +$HOME+, the recommended procedure is something like this:
 
------
-./configure --prefix=$HOME/clicraft \
-   --sysconfdir=$HOME/clicraft/etc \
-   --libexecdir=$HOME/clicraft/lib \
-   --localstatedir=$HOME/clicraft/srv \
-   --enable-shortdirs \
-   --with-c10t --with-mcexplore
-make; make install
------
+	./configure --prefix=$HOME/clicraft \
+	   --sysconfdir=$HOME/clicraft/etc \
+	   --libexecdir=$HOME/clicraft/lib \
+	   --localstatedir=$HOME/clicraft/srv \
+	   --enable-shortdirs \
+	   --with-c10t --with-mcexplore
+	make; make install
 
 For installing to a linux system, this will give a more typical setup:
 
------
-./configure --prefix=/usr/local \
-   --sysconfdir=/usr/local/etc \
-   --libexecdir=/usr/local/lib \
-   --localstatedir=/var/local \
-   --with-c10t --with-mcexplore
-make; make install
------
+	./configure --prefix=/usr/local \
+	   --sysconfdir=/usr/local/etc \
+	   --libexecdir=/usr/local/lib \
+	   --localstatedir=/var/local \
+	   --with-c10t --with-mcexplore
+	make; make install
 
 For staged installs, you can use e.g. `make DESTDIR=/tmp/staging` instead.
 For more verbose installation instructions, see +INSTALL+.
@@ -56,13 +55,13 @@ For more verbose installation instructions, see +INSTALL+.
 Once you've successfully installed clicraft, you should be able to get usage
 info using
 
-   clicraft help
+	clicraft help
 
 To configure the server, copy the default config file found in +$sysconfdir/clicraft/+
 to +$sysconfdir/clicraft/clicraft.conf+ and edit to taste
 
-   cp /etc/clicraft-defaults.conf /etc/clicraft.conf
-   vim /etc/clicraft.conf
+	cp /etc/clicraft-defaults.conf /etc/clicraft.conf
+	vim /etc/clicraft.conf
 
 /////
 vim: set syntax=asciidoc ts=4 sw=4 noet:
