Mark clicraft as alpha software
I've been using clicraft successfully in production for almost a
year now, maybe more, so *EXPERIMENTAL* is a bit hyperbolic.

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -3,7 +3,7 @@ Clicraft ReadMe
 
 A command-line minecraft server wrapper.
 
-WARNING: This is *EXPERIMENTAL* software. Use at your own risk!
+WARNING: This is alpha software. Use at your own risk!
 
 Overview
 --------
